<resources>
    <string name="app_name">Cimanggu Steam</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="nama">Nama</string>
    <string name="buat_baru">Buat Baru</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="informasi">Informasi</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="pelayanan">Pelayanan</string>
    <string name="antrian">Antrian</string>
    <string name="cimanggu_steam">Cimanggu Steam</string>
    <string name="title_activity_informasi">InformasiActivity</string>
    <string name="about">Cimanggu Steam merupakan tempat pencucian motor dan mobil yang ber alamat di jln taman cimanggu kota bogor, aplikasi ini mempermudah pelanggan untuk melakukan booking antrian untuk mencegah antrian yang lama.</string>
    <string name="keluar">Keluar</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="riwayat_antrian">Riwayat Antrian</string>
    <string name="teliti_bersih"><![CDATA[Teliti & Bersih]]></string>

</resources>
