<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/app_bar_layout" android:id="@+id/main_page_toolbar"/>

    <ImageView
        android:layout_marginTop="50dp"
        android:background="#03A9F4"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/logonew" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cimanggu_steam"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/teliti_bersih"
                android:textColor="@android:color/white" />

        </LinearLayout>


        <LinearLayout

            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/imagebtn1"
                    android:layout_width="148dp"
                    android:layout_height="148dp"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/holo_blue_light"
                    android:src="@drawable/carwash" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/informasi"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white" />

                <ImageButton
                    android:id="@+id/imagebtn3"
                    android:layout_width="148dp"
                    android:layout_height="148dp"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/holo_blue_light"
                    android:src="@drawable/pesanan" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/antrian"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/imagebtn2"
                    android:layout_width="148dp"
                    android:layout_height="148dp"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/holo_blue_light"
                    android:src="@drawable/fasilitas" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fasilitas"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white" />

                <ImageButton
                    android:id="@+id/imagebtn4"
                    android:layout_width="148dp"
                    android:layout_height="148dp"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/holo_blue_light"
                    android:src="@drawable/pelayanan" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/riwayat_antrian"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>