<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    android:background="#70B9F8"
    android:orientation="vertical">

    <include layout="@layout/app_bar_layout" android:id="@+id/register_toolbar"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="*Isi Data Dengan Benar Dan Lengkap!"
        android:layout_marginLeft="9dp"
        android:textStyle="italic" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/regnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext"
        android:textColorHint="#FBFFFFFF">

        <android.support.design.widget.TextInputEditText
            android:layout_width="355dp"
            android:layout_height="44dp"
            android:layout_below="@+id/regnama"
            android:layout_alignStart="@+id/regnama"
            android:layout_alignBottom="@+id/regnama"
            android:hint="@string/nama"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/regtelepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext"
        android:textColorHint="#ffffff">

        <android.support.design.widget.TextInputEditText
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regtelepon"
            android:layout_alignStart="@+id/regtelepon"
            android:inputType="phone"
            android:maxLength="13"
            android:hint="@string/no_telepon"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/regemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext"
        android:textColorHint="#FFFFFF">

        <android.support.design.widget.TextInputEditText
            android:layout_width="352dp"
            android:layout_height="40dp"
            android:layout_above="@+id/regemail"
            android:layout_alignStart="@+id/regemail"
            android:layout_alignBottom="@+id/regemail"
            android:hint="@string/email"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/regpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        app:passwordToggleEnabled="true"
        android:background="@drawable/edittext"
        android:textColorHint="#F8FFFFFF">

        <android.support.design.widget.TextInputEditText
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regpass"
            android:layout_alignStart="@+id/regpass"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/btn2"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/stylebutton"
        android:text="@string/buat_baru"
        android:textColor="#ffffff" />


</LinearLayout>