<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#70B9F8"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar_layout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext"
        android:textColorHint="#ffffff">

        <android.support.design.widget.TextInputEditText
            android:layout_width="361dp"
            android:layout_height="55dp"
            android:hint="@string/masukkan_email"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext"
        android:textColorHint="#ffffff">

        <android.support.design.widget.TextInputEditText
            android:layout_width="327dp"
            android:layout_height="55dp"
            android:hint="@string/masukkan_password"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnmasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext"
        android:text="@string/masuk"
        android:textColor="#ffffff" />
</LinearLayout>